# Assignments

./: .gitignore  README  nano.31250.save
CS 10/: generate_lab_archive.sh
CS 10/labs/: lab3.py  lab4a.py  lab4b.py  lab6a.py  lab6b.py  lab7.py  lab9a.py  lab9b.py
CS 10/week1/: homework1.py  lab2a.py
CS 10/week10/: homework10.py  lab10.py
CS 10/week11/: homework11.py  lab11.py
CS 10/week12/: homework12.py  lab12.py  project4.py
CS 10/week14/: homework14.py  lab14.py
CS 10/week15/: homework15.py
CS 10/week2/: homework2.py  lab2a.py  lab2b.py  project1.py
CS 10/week3/: classwork.py
CS 10/week4/: homework4.py
CS 10/week5/: classwork.py  homework5.py  lab5a.py  lab5b.py
CS 10/week6/: classwork.py  homework6.py  project2.py
CS 10/week7/: homework7.py
CS 10/week8/: homework8.py  lab8.py
CS 10/week9/: homework9.py  project3.py
CS 36/Program2/: Makefile
CS 36/Program4/: README
CS 36/Program5/: .gitignore
CS 37/Project1/: main.cpp
CS 37/Project2/: Makefile  combat.txt  report.txt  submission.cpp
CS 37/Project2E/: Makefile  submission.cpp
CS 37/Project3/: Minion.h  example_output.txt
CS 37/Project4/: BobaOrder.h  DeliveryOrder.h  FoodOrder.cpp  FoodOrder.h  main.cpp  out_expected.txt
CS 38/: .gitignore  fedora_installation  fedora_installation.sh  install_maven  out.txt  rung  rung.sh
CS 40A/homework10/: q1.asm  q2.asm
CS 40A/homework2/: q1.asm  q3.asm  q4.asm  q5.asm
CS 40A/homework3/: q1.asm
CS 40A/homework4/: q2.asm
CS 40A/homework5/: q2.asm  utils.asm
CS 40A/homework6/: q1.txt
CS 40A/homework8/: project4.asm
CS 40A/homework9/: utils.asm
CS 40A/tools/: zip.sh
CS 41/: CMakeLists.txt  main.cpp  zoom_url
CS 41/week1/array_queue/src/: ArrayBasedQueueMarkTikhonov.cpp
CS 41/week1/binary_search/src/: BinarySerachMarkTikhonov.cpp
CS 41/week1/dynamic_array/src/: DynamicArrayMarkTikhonov.cpp
CS 41/week1/io/src/: IOMarkTikhonov.cpp
CS 41/week1/linear_search/src/: LinearSearchMarkTikhonov.cpp
CS 41/week1/linked_list/src/: LinkedListMarkTikhonov.cpp
CS 41/week1/list_queue/src/: LinkBasedStackMarkTikhonv.cpp
CS 41/week1/sort/src/: SortMarkTikhonov.cpp
CS 41/week1/sorted_list/src/: SortedLinkedListMarkTikhonov.cpp
CS 41/week10/exam3/src/: main.cpp
CS 41/week13/chaining/: CMakeLists.txt  ChainingMarkTikhonov.cpp
CS 41/week13/chaining/src/: buffer.hpp  circular_list.hpp  dl_node.hpp  hash_table.hpp  index_set.hpp  linked_list.hpp  ordered_buffer.hpp  ordered_list.hpp  unordered_list.hpp  zero_init_allocator.hpp
CS 41/week13/chaining/tests/: test_circular_list.cpp  test_dl_node.cpp  test_hash_table.cpp  test_index_set.cpp  test_linked_list.cpp  test_main.cpp  test_ordered_buffer.cpp  test_ordered_list.cpp  test_sample.cpp  test_unordered_list.cpp  test_zero_init_allocator.cpp
CS 41/week14/run_length_encoding/src/: RunLengthEncodingMarkTikhonov.cpp
CS 41/week15/project4/: CMakeLists.txt
CS 41/week15/project4/samples/: given_program.txt  my_program.txt
CS 41/week15/project4/src/: borg_interpreter.hpp  main.cpp  scope.hpp
CS 41/week15/project4/src/collections/: dl_node.hpp  hash_set.hpp  hash_table.hpp  index_set.hpp  linked_list.hpp  list.hpp  ordered_list.hpp  sl_node.hpp  stack.hpp  unordered_list.hpp
CS 41/week15/project4/src/interpreter/: context.cpp  context.hpp
CS 41/week15/project4/src/interpreter/expressions/: assignment_expression.cpp  assignment_expression.hpp  binary_expression.cpp  binary_expression.hpp  expression.hpp  expressions.hpp  mathematical_expression.hpp  postfix_unary_expression.cpp  postfix_unary_expression.hpp  prefix_unary_expression.cpp  prefix_unary_expression.hpp  unary_expression.hpp
CS 41/week15/project4/src/parser/: expression_parser.cpp  expression_parser.hpp  expression_token.hpp  scanner.cpp  scanner.hpp
CS 41/week15/project4/src/utils/: dl_node.hpp  error.cpp  error.hpp  hash.hpp  sl_node.hpp  token.hpp  token_type.hpp
CS 41/week15/project4/tests/: CMakeLists.txt
CS 41/week15/project4/tests/collections/: test_hash_set.cpp  test_linked_list.cpp  test_main.cpp
CS 41/week15/src/: borg_interpreter.hpp  dynamic_array.hpp  hash_table.hpp  list.hpp  main.cpp  node.hpp
CS 41/week3/project1/: Project1MarkTikhonov.cpp
CS 41/week3/project1/src/: Program1MarkTikhonov.cpp  main.cpp  node.hpp  reverse_polish_expression.cpp  reverse_polish_expression.hpp  stack.hpp
CS 41/week4/binary_search_tree/src/: BinarySearchTreeMarkTikhonov.cpp
CS 41/week4/binary_tree/src/: BinaryTreeLabMarkTiknhonov.cpp
CS 41/week5/: Project2MarkTikhonov.cpp  project2_run.sh  sample.txt
CS 41/week5/src/: main.cpp  node.hpp  order.hpp  person.cpp  person.hpp  sorted_list.hpp  sorted_node_order.hpp
CS 41/week6/project3/: Project3MarkTikhonov.cpp  person_sample.txt
CS 41/week6/project3/src/: binary_search_tree.hpp  main.cpp  person.hpp  tree_node.hpp
CS 41/week7/graph_matrix/: GraphMatrixMarkTikhonov.cpp
CS 41/week8/: HashTableMarkTikhonov.cpp
CS10/week1/: lab_1a.py
CS10/week2/: homework2.py  project1.py
CS10/week3/: homework3.py
CS36/Program0/: Makefile
CS36/Program5/: Makefile
CS40A/homework10/: utils.asm
CS40A/homework2/: q2.asm
CS40A/homework3/: q2.asm
CS40A/homework4/: q1.asm
CS40A/homework5/: q1.asm
CS40A/homework6/: q2.asm
CS40A/homework8/: utils.asm
CS40A/homework9/: q1.asm
CS40A/tools/: run.sh
MATH 24H/hw5/: us_population_cenesus_data.txt
PHYS4B/hw1/: globals.py  q10.py  q11.py  q14.py  q15.py  q2.py  q3.py  q4.py  q5.py  q6.py  q9.py
Program1/: Makefile
Program1/src/: HomeWork1MarkTikhonov.c
Program3/: Makefile
Program3/src/: HomeWork3MarkTikhonov.c
Program4/: Makefile
Program4/src/: HomeWork4MarkTikhonov.c  employee_info.c
Program5/: Makefile
Program5/src/: HomeWork5MarkTikhonov.c  args_parse.c
Project1/: Makefile
Project2/: Makefile2
Project2/src/: combat_details.cpp  combat_details.h  combat_utilities.h  main.cpp
Project3/: CMakeLists.txt  Minion.cpp  Minion.h  main.cpp
Project4/: Account.cpp  Account.h  BobaOrder.cpp  CMakeLists.txt  DeliveryOrder.cpp  InvalidInputException.h  out
src/: home_work5.py  main.py
(+124 files in other folders)
